completo.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kafka
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  namespace: kafka
spec:
  selector:
    app: zookeeper
  ports:
  - port: 2181
    protocol: TCP
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zookeeper
  namespace: kafka
spec:
  selector:
    matchLabels:
      app: zookeeper 
  serviceName: zookeeper
  replicas: 1 
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
      - name: zookeeper
        image: bitnami/zookeeper
        imagePullPolicy: Never
        ports:
        - containerPort: 2181
        resources:
            limits:
              cpu: 200m
              memory: 500Mi
            requests:
              cpu: 100m
              memory: 200Mi 
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: kafka
spec:
  selector:
    app: kafka
  ports:
  - name: kafka
    port: 9092
    protocol: TCP
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
  namespace: kafka
spec:
  selector:
    matchLabels:
      app: kafka 
  serviceName: kafka
  replicas: 3 
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
      - name: kafka
        image: bitnami/kafka
        imagePullPolicy: Never
        ports:
        - containerPort: 9092
        resources:
            limits:
              cpu: 200m
              memory: 500Mi
            requests:
              cpu: 100m
              memory: 200Mi        
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  go-producer
  namespace: kafka
  labels:
    app:  go-producer
spec:
  selector:
    matchLabels:
      app: go-producer
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  go-producer
    spec:
      containers:
      - name:  go-producer
        image:  go-producer
        imagePullPolicy: Never
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort:  8070
          name:  http
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: go-producer
  namespace: kafka
spec:
  selector:
    app: go-producer
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
    - name: go-producer
      protocol: TCP
      port: 8070
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  go-consumer
  namespace: kafka
  labels:
    app:  go-consumer
spec:
  selector:
    matchLabels:
      app: go-consumer
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  go-consumer
    spec:
      containers:
      - name:  go-consumer
        image:  go-consumer
        imagePullPolicy: Never
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort:  8072
          name:  http
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: go-consumer
  namespace: kafka
spec:
  selector:
    app: go-consumer
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
    - name: go-consumer
      protocol: TCP
      port: 8072
